# VexiaSearch

./: .env.example  .gitignore  README.md  data.py  main.py  model.py  pyproject.toml  requirements.txt  vercel.json
.vercel/: project.json
migrations/: 20250828_rag_hybrid.sql
scripts/: bench.py
src/: .env.example  __init__.py  agents.py  claude.py  load_api.py  rag.py  raq-query.py  supabase_vector.py  testagent.py
src/ingestion/: __init__.py  embed.py  pdf_parser.py
tests/: conftest.py  test_chunker.py  test_rerank.py  test_rrf.py
