[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.26",
    "lightning>=2.5.2",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pi-heif>=0.22.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.2",
    "pydantic-settings>=2.10.0",
    "supabase>=2.16.0",
    "torch>=2.7.1",
    "unstructured>=0.17.2",
    "unstructured-inference>=1.0.5",
    "unstructured-pytesseract>=0.3.15",
]
